test_suite/tests/ui/unexpected-literal/variant.stderr
error: unexpected literal in serde variant attribute
 --> $DIR/variant.rs:5:13
  |
5 |     #[serde("literal")]
  |             ^^^^^^^^^

error: aborting due to previous error

