test_suite/tests/ui/unexpected-literal/variant.rs
use serde_derive::Serialize;

#[derive(Serialize)]
enum E {
    #[serde("literal")]
    V,
}

fn main() {}
